src/test/resources/purescript_examples/passing/ImplicitEmptyImport.purs.psi
FILE
  PureASTWrapperElement(Program)
    PureASTWrapperElement(Module)
      PsiElement(module)('module')
      PsiElement(whitespace)(' ')
      PureASTWrapperElement(Qualified)
        PureASTWrapperElement(ModuleName)
          PsiElement(proper name)('Main')
      PsiElement(whitespace)(' ')
      PsiElement(where)('where')
      PsiElement(whitespace)('\n\n')
      PureASTWrapperElement(ValueDeclaration)
        PsiElement(identifier)('main')
        PsiElement(whitespace)(' ')
        PsiElement(=)('=')
        PsiElement(whitespace)(' ')
        PureASTWrapperElement(Value)
          PureASTWrapperElement(PrefixValue)
            PsiElement(do)('do')
            PsiElement(whitespace)('\n  ')
            PureASTWrapperElement(DoNotationValue)
              PureASTWrapperElement(Value)
                PureASTWrapperElement(PrefixValue)
                  PureASTWrapperElement(Var)
                    PureASTWrapperElement(Qualified)
                      PureASTWrapperElement(ModuleName)
                        PsiElement(proper name)('Debug')
                        PsiElement(.)('.')
                      PureASTWrapperElement(ModuleName)
                        PsiElement(proper name)('Trace')
                        PsiElement(.)('.')
                      PsiElement(identifier)('trace')
                      PsiElement(whitespace)(' ')
                  PureASTWrapperElement(StringLiteral)
                    PsiElement(string)('"Hello"')
                    PsiElement(whitespace)('\n  ')
            PureASTWrapperElement(DoNotationValue)
              PureASTWrapperElement(Value)
                PureASTWrapperElement(PrefixValue)
                  PureASTWrapperElement(Var)
                    PureASTWrapperElement(Qualified)
                      PureASTWrapperElement(ModuleName)
                        PsiElement(proper name)('Debug')
                        PsiElement(.)('.')
                      PureASTWrapperElement(ModuleName)
                        PsiElement(proper name)('Trace')
                        PsiElement(.)('.')
                      PsiElement(identifier)('trace')
                      PsiElement(whitespace)(' ')
                  PureASTWrapperElement(StringLiteral)
                    PsiElement(string)('"Goodbye"')
                    PsiElement(whitespace)('\n  ')
            PureASTWrapperElement(DoNotationValue)
              PureASTWrapperElement(Value)
                PureASTWrapperElement(PrefixValue)
                  PureASTWrapperElement(Var)
                    PureASTWrapperElement(Qualified)
                      PureASTWrapperElement(ModuleName)
                        PsiElement(proper name)('Debug')
                        PsiElement(.)('.')
                      PureASTWrapperElement(ModuleName)
                        PsiElement(proper name)('Trace')
                        PsiElement(.)('.')
                      PsiElement(identifier)('trace')
                      PsiElement(whitespace)(' ')
                  PureASTWrapperElement(StringLiteral)
                    PsiElement(string)('"Done"')
                    PsiElement(whitespace)('\n')
